# rajac

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/ast/: Cargo.toml
crates/ast/src/: arena.rs  ast.rs  ast_type.rs  lib.rs  nodes.rs
crates/ballpit/: Cargo.toml
crates/ballpit/src/: ballpit_main.rs  main.rs
crates/base/: Cargo.toml
crates/base/src/: cli.rs  error.rs  file_path.rs  hash.rs  indent.rs  lib.rs  logging.rs  qualified_name.rs  result.rs  shared_string.rs  span.rs  test_print.rs  timestamp.rs  value.rs
crates/base/src/error/: message_error.rs
crates/base/tests/: error_rendering.rs  result_formatting.rs
crates/bytecode/: Cargo.toml
crates/bytecode/src/: bytecode.rs  classfile.rs  lib.rs  pretty_print.rs
crates/bytecode/src/classfile/: attributes.rs  builder.rs  descriptor.rs  generation_context.rs  member_lowering.rs  mod.rs  naming.rs
crates/classpath/: Cargo.toml
crates/classpath/src/: classpath.rs  lib.rs
crates/cli/: Cargo.toml
crates/compiler/: Cargo.toml
crates/compiler/src/: compilation_result.rs  compiler.rs  lib.rs  main.rs  rajac_compiler_main.rs  statistics.rs
crates/compiler/src/stages/: attribute_analysis.rs  collection.rs  discovery.rs  flow_analysis.rs  generation.rs  mod.rs  parsing.rs  resolution.rs
crates/compiler/src/stages/generation/: diagnostics.rs  emit.rs  generation_result.rs  mod.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: annotation.rs  diagnostic.rs  diagnostics.rs  lib.rs  render_diagnostic.rs  severity.rs  source_chunk.rs  span.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer.rs
crates/parser/: Cargo.toml
crates/parser/src/: decl.rs  expr.rs  lib.rs  parser.rs  stmt.rs
crates/symbols/: Cargo.toml
crates/symbols/src/: lib.rs  package_table.rs  symbol.rs  symbol_kind.rs  symbol_table.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs  token.rs
crates/types/: Cargo.toml
crates/types/src/: array_type.rs  class_type.rs  field_arena.rs  field_id.rs  field_signature.rs  ident.rs  lib.rs  lib.rs.bak  method_arena.rs  method_id.rs  method_signature.rs  primitive_type.rs  type_.rs  type_arena.rs  type_id.rs  type_variable.rs  wildcard.rs
crates/verification/: Cargo.toml
crates/verification/src/: main.rs  verification_main.rs
docs/: PLANS.md  VERIFICATION.md  compilation-pipeline.md
docs/plans/: 2026-03-14-equality-branching-plan.md  2026-03-15-bytecode-context-refactor-plan.md  2026-03-15-control-flow-semantic-validation-plan.md  2026-03-15-invocation-pipeline-plan.md  2026-03-15-throwing-exceptions-plan.md  2026-03-15-type-checking-plan.md  2026-03-15-unsupported-feature-exception-plan.md  2026-03-16-array-creation-plan.md  2026-03-16-array-initializer-plan.md  2026-03-16-enum-support-plan.md  2026-03-16-instanceof-plan.md  2026-04-12-multi-catch-plan.md  2026-04-12-try-catch-bytecode-plan.md  2026-04-12-try-catch-finally-bytecode-plan.md
docs/plans/completed/: 2026-03-14-equality-branching-plan.md  2026-03-15-bytecode-context-refactor-plan.md  2026-03-15-control-flow-semantic-validation-plan.md  2026-03-15-invocation-pipeline-plan.md  2026-03-15-throwing-exceptions-plan.md  2026-03-15-type-checking-plan.md  2026-03-15-unsupported-feature-exception-plan.md  2026-03-16-array-creation-plan.md  2026-03-16-array-initializer-plan.md  2026-03-16-enum-support-plan.md  2026-03-16-instanceof-plan.md  2026-03-17-blank-final-field-plan.md  2026-03-17-blank-final-initializers-plan.md  2026-03-17-constructor-chaining-final-field-plan.md  2026-03-17-final-variable-flow-plan.md  2026-03-17-flow-analysis-plan.md  2026-03-17-try-finally-bytecode-plan.md  2026-04-12-multi-catch-plan.md  2026-04-12-try-catch-bytecode-plan.md  2026-04-12-try-catch-finally-bytecode-plan.md
scripts/: check-code.sh
verification/: CompileInvalidSources.java  compile.sh
verification/output/openjdk_21/invalid/: BadUnicodeEscape.txt  EmptyCharLiteral.txt  IllegalCharacter.txt  InvalidEscapeSequence.txt  InvalidIdentifierStart.txt  MalformedNumber.txt  NonBooleanWhile.txt  ReturnTypeMismatch.txt  UnclosedCharLiteral.txt  UnclosedComment.txt  UnterminatedString.txt  errors.txt
verification/sources/: EmptyClass.java  ExtendsObjectExplicit.java  ExtendsSimpleBase.java  ImplementsInterface.java  InstanceMethodReturnInt.java  InterfaceAbstractMethod.java  PublicFieldInt.java  PublicStaticFinalIntConstant.java  TestInterface.java
verification/sources/verify/algorithms/: CollatzConjecture.java  FibonacciIterative.java  FibonacciRecursive.java
verification/sources/verify/arithmetic/: ArithmeticByte.java  ArithmeticChar.java  ArithmeticDouble.java  ArithmeticFloat.java  ArithmeticInt.java  ArithmeticLong.java  ArithmeticShort.java  BoolOps.java  PrimitiveNumberLiterals.java
verification/sources/verify/arrays/: MultiArrayCreation.java  NestedArrayInitializer.java  PrimitiveArrayCreation.java  PrimitiveArrayInitializer.java  ReferenceArrayCreation.java  ReferenceArrayInitializer.java
verification/sources/verify/controlflow/: BreakContinue.java  DoWhileLoop.java  (+17 more)
verification/sources_invalid/lexer/: BadUnicodeEscape.java  EmptyCharLiteral.java  IllegalCharacter.java  InvalidEscapeSequence.java  InvalidIdentifierStart.java  MalformedNumber.java  UnclosedCharLiteral.java  UnterminatedString.java
verification/sources_invalid/typecheck/: BlankFinalDoubleInitViaThis.java  BlankFinalDuplicateAssignment.java  BlankFinalInitializerBlockDuplicateAssignment.java  BlankFinalInitializerBlockMissingAssignment.java  BlankFinalMissingAssignment.java  BlankFinalMissingViaThis.java  BranchMaybeUninitialized.java  BreakOutsideLoop.java  ContinueOutsideLoop.java  DuplicateActiveLabel.java  DuplicateMultiCatchAlternative.java  DuplicateSwitchDefault.java  FinalFieldInitializerReassignment.java  FinalLocalReassignment.java  FinalMaybeUninitialized.java  FinalParameterReassignment.java  LoopMaybeUninitialized.java  NonBooleanWhile.java  ReturnTypeMismatch.java  UninitializedLocalRead.java
verification/unsupported/: ExprAddStringInt.java  InnerClasses.java  InstanceMethodReturnInt.java
(+35 files in other folders)
