[workspace]
resolver = "3"

members = [
    "crates/base", "crates/bytecode", "crates/ballpit", "crates/token", "crates/lexer", "crates/compiler", "crates/ast", "crates/parser"
]

[workspace.dependencies]
expect-test = "1.5.1"
anstream = "1.0.0"
smol_str = "0.3.5"
speedy = "0.8.7"
relative-path = "2.0.1"
rocksdb = { version = "0.24.0" }
self_cell = "1.2.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
parking_lot = "0.12.5"
rapidhash = "4.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ristretto_classfile = "0.29.0"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimization in Development mode.
opt-level = 0
lto = false
#debug = false


[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
