[workspace]
resolver = "3"

members = [
    "crates/base", "crates/bytecode", "crates/ballpit", "crates/token", "crates/lexer", "crates/compiler", "crates/ast", "crates/parser", "crates/verification", "crates/symbols", "crates/classpath", "crates/diagnostics", "crates/cli"
]

[workspace.package]
license = "MIT"
repository = "https://github.com/manuel-woelker/rajac"

[workspace.dependencies]
expect-test = "1.5.1"
anstream = "1.0.0"
ecow = "0.2.2"
speedy = "0.8.7"
relative-path = "2.0.1"
rocksdb = { version = "0.24.0" }
self_cell = "1.2.2"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
parking_lot = "0.12.5"
rapidhash = "4.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ristretto_classfile = "0.29.0"
walkdir = "2.5.0"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimization in Development mode.
opt-level = 0
lto = false
#debug = false


[profile.release]
debug = true
opt-level = "z"
lto = true
#strip = true
codegen-units = 1
