[package]
name = "rajac-ast"
version = "0.1.1"
edition = "2024"
description = "Abstract syntax tree definitions for the rajac Java compiler"
license.workspace = true
repository.workspace = true

[dependencies]
rajac-base = { version = "0.1.1", path = "../base" }
rajac-types = { version = "0.1.1", path = "../types" }
