[package]
name = "rajac-base"
version = "0.1.0"
edition = "2024"
description = "Shared foundational utilities for the rajac compiler workspace"
license.workspace = true
repository.workspace = true

[dev-dependencies]
expect-test = { workspace = true }

[dependencies]
anstream = {workspace = true}
ecow = {workspace = true}
speedy = {workspace = true}
relative-path = {workspace = true}
tracing = {workspace = true}
tracing-error = {workspace = true}
tracing-subscriber = {workspace = true}
parking_lot = {workspace = true}
rapidhash = {workspace = true}
serde = {workspace = true}
