[package]
name = "rajac-bytecode"
version = "0.1.0"
edition = "2024"
description = "JVM bytecode generation and classfile support for rajac"
license.workspace = true
repository.workspace = true

[dev-dependencies]
expect-test = { workspace = true }

[dependencies]
rajac-base = {path = "../base"}
rajac-ast = {path = "../ast"}
rajac-symbols = {path = "../symbols"}
rajac-types = {path = "../types"}
ristretto_classfile = {workspace = true}
