[package]
name = "rajac-classpath"
version = "0.1.0"
edition = "2024"
description = "Classpath loading and symbol extraction for rajac"
license.workspace = true
repository.workspace = true

[dependencies]
rajac-base = { path = "../base" }
rajac-symbols = { path = "../symbols" }
rajac-types = { path = "../types" }
ristretto_classfile = { workspace = true }
walkdir = { workspace = true }
zip = "2.2.2"
rayon = "1.10"
