[package]
name = "rajac-compiler"
version = "0.1.0"
edition = "2024"
description = "Compiler pipeline orchestration for rajac"
license.workspace = true
repository.workspace = true

[[bin]]
name = "rajac-compiler"
path = "src/rajac_compiler_main.rs"

[dependencies]
rajac-parser = { path = "../parser" }
rajac-ast = { path = "../ast" }
rajac-types = { path = "../types" }
rajac-symbols = { path = "../symbols" }
rajac-classpath = { path = "../classpath" }
walkdir = "2.5"
rayon = "1.10"
rajac-base = { path = "../base" }
rajac-bytecode = { path = "../bytecode" }
rajac-diagnostics = { path = "../diagnostics" }
ristretto_classfile = {workspace = true}
tracing = { workspace = true }

[dev-dependencies]
rajac-lexer = { path = "../lexer" }
