[package]
name = "rajac-diagnostics"
version = "0.1.1"
edition = "2024"
description = "Diagnostic reporting infrastructure for rajac"
license.workspace = true
repository.workspace = true

[dependencies]
annotate-snippets = "0.12"
rajac-base = { version = "0.1.1", path = "../base" }

[dev-dependencies]
annotate-snippets = { version = "0.12", features = ["testing-colors"] }
expect-test = "1.5"
strip-ansi = "0.1"
