[package]
name = "rajac-lexer"
version = "0.1.0"
edition = "2024"
description = "Java lexer for the rajac compiler"
license.workspace = true
repository.workspace = true

[dependencies]
rajac-token = { path = "../token" }
rajac-diagnostics = { path = "../diagnostics" }
rajac-base = { path = "../base" }

[dev-dependencies]
expect-test = "1.5"
strip-ansi = "0.1"
