[package]
name = "rajac-lexer"
version = "0.1.1"
edition = "2024"
description = "Java lexer for the rajac compiler"
license.workspace = true
repository.workspace = true

[dependencies]
rajac-token = { version = "0.1.1", path = "../token" }
rajac-diagnostics = { version = "0.1.1", path = "../diagnostics" }
rajac-base = { version = "0.1.1", path = "../base" }

[dev-dependencies]
expect-test = "1.5"
strip-ansi = "0.1"
