[package]
name = "rajac-parser"
version = "0.1.0"
edition = "2024"
description = "Java parser for the rajac compiler"
license.workspace = true
repository.workspace = true

[dependencies]
rajac-lexer = { path = "../lexer" }
rajac-ast = { path = "../ast" }
rajac-token = { path = "../token" }
rajac-base = { path = "../base" }
rajac-types = { path = "../types" }
rajac-diagnostics = { path = "../diagnostics" }
