[package]
name = "rajac-symbols"
version = "0.1.1"
edition = "2024"
description = "Symbol tables and semantic symbol data for rajac"
license.workspace = true
repository.workspace = true

[dependencies]
rajac-base = { version = "0.1.1", path = "../base" }
rajac-types = { version = "0.1.1", path = "../types" }
