[package]
name = "verification"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.0"
sha2 = "0.10"
hex = "0.4"
rajac-compiler = { path = "../../crates/compiler" }
rajac-base = { path = "../../crates/base" }
rajac-bytecode = { path = "../../crates/bytecode" }
colored = "2.0"
diff = "0.1"
ristretto_classfile = "0.29.0"
regex = "1.0"