[package]
name = "verification"
version = "0.1.0"
edition = "2021"
description = "OpenJDK compatibility verification runner for rajac"
license.workspace = true
repository.workspace = true

[[bin]]
name = "verification"
path = "src/verification_main.rs"

[dependencies]
walkdir = "2.0"
sha2 = "0.10"
hex = "0.4"
rajac-compiler = { path = "../../crates/compiler" }
rajac-base = { path = "../../crates/base" }
rajac-bytecode = { path = "../../crates/bytecode" }
rajac-diagnostics = { path = "../../crates/diagnostics" }
rajac-symbols = { path = "../../crates/symbols" }
colored = "2.0"
diff = "0.1"
ristretto_classfile = "0.29.0"
regex = "1.0"
tracing = { workspace = true }
