[package]
name = "rajac-verification"
version = "0.1.1"
edition = "2021"
description = "OpenJDK compatibility verification runner for rajac"
license.workspace = true
repository.workspace = true

[[bin]]
name = "verification"
path = "src/verification_main.rs"

[dependencies]
walkdir = "2.0"
sha2 = "0.10"
hex = "0.4"
rajac-compiler = { version = "0.1.1", path = "../../crates/compiler" }
rajac-base = { version = "0.1.1", path = "../../crates/base" }
rajac-bytecode = { version = "0.1.1", path = "../../crates/bytecode" }
rajac-diagnostics = { version = "0.1.1", path = "../../crates/diagnostics" }
rajac-symbols = { version = "0.1.1", path = "../../crates/symbols" }
colored = "2.0"
diff = "0.1"
ristretto_classfile = "0.29.0"
regex = "1.0"
tracing = { workspace = true }
